<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:rowCount="7">

    <TextView
        android:id="@+id/precoGasosaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/textViewPadding"
        android:text="@string/gasolinaText"
        android:textAlignment="center"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valorGasolinaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:padding="@dimen/seekBarPadding"
        android:text="0.0" />

    <SeekBar
        android:id="@+id/gasosaSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/seekBarPadding"
        android:layout_gravity="fill_horizontal"
        android:layout_column="1"
        android:layout_row="1"
        android:max="100"
        android:progress="50"/>

    <TextView
        android:id="@+id/precoEtanouTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="@dimen/textViewPadding"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:text="@string/etanolText" />

    <TextView
        android:id="@+id/valorEtanolTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:padding="@dimen/seekBarPadding"
        android:text="0.0" />

    <SeekBar
        android:id="@+id/etanouSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:layout_column="1"
        android:max="100"
        android:padding="@dimen/seekBarPadding"
        android:progress="50" />

    <TextView
        android:id="@+id/recomendationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="@dimen/textViewPadding"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:text="@string/melhorusar" />

    <TextView
        android:id="@+id/respTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="5"
        android:textSize="35sp"
        android:padding="@dimen/recotextViewPadding"
        android:text="@string/recomendationTextGasolina" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="269dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="6"
        android:contentDescription="@string/imageDescrption"
        app:srcCompat="@drawable/gasolina" />


</GridLayout>